# full-stack-template-python

./: .dockerignore  .env.example  .env.production.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
client-sdk/python/: README.md  setup.py
client-sdk/python/examples/: async_usage.py  basic_usage.py  error_handling.py
client-sdk/python/src/fullstack_api/: __init__.py  client.py  exceptions.py  models.py
client-sdk/python/tests/: test_client.py
client-sdk/typescript/: README.md  package.json  tsconfig.json
client-sdk/typescript/examples/: advanced-usage.ts  basic-usage.ts  error-handling.ts
client-sdk/typescript/src/: index.ts
client-sdk/typescript/src/types/: index.ts
client-sdk/typescript/tests/: client.test.ts
docker/: Dockerfile  Dockerfile.frontend  nginx-frontend.conf  nginx-production.conf  nginx.conf
docs/: API_REFERENCE.md  API_VERSIONING_STRATEGY.md  CLAUDE.md  CORE_FULLSTACK_TEMPLATE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md
docs/guides/: API_INTEGRATION.md  AUTHENTICATION_GUIDE.md  GETTING_STARTED.md  TESTING_GUIDE.md  TYPESCRIPT_DEVELOPMENT.md
examples/node-script/: README.md  batch-operations.js  package.json  user-sync.js
examples/python-cli/: README.md  fullstack_cli.py  requirements.txt
examples/react-example/: README.md  package.json
examples/react-example/src/: App.tsx
examples/react-example/src/components/: Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
scripts/: backup.sh  deploy.sh  generate_api_docs.py  health_check.sh  reset_db.sh  setup_db.py  setup_dev.sh  setup_ssl.sh  test_api_endpoints.py  test_api_static.py  test_docker_build.sh  test_migrations.py  validate_docker.py  verify_migrations.py
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/src/fullstack_api/: __init__.py  client.py  exceptions.py  storage.py  types.py
sdk/typescript/: README.md  package.json  rollup.config.js
sdk/typescript/src/: client.ts  index.ts  storage.ts  types.ts
src/app/api/: __init__.py  dependencies.py  main.py  openapi.py  schemas.py
src/app/api/middleware/: __init__.py  versioning.py
src/app/api/routes/: __init__.py  auth.py  users.py
src/app/cli/: commands.py
src/app/core/: cache.py  config.py  config_production.py  email.py  exceptions.py  logging.py  monitoring.py  rate_limit.py  security.py  utils.py
src/app/db/: init_db.py  session.py
src/app/db/models/: __init__.py  audit_log.py  base.py  login_attempt.py  refresh_token.py  user.py  uuid.py
src/app/templates/email/: base.html  email_verification.html  password_reset.html  welcome.html
tests/: conftest.py
tests/functional/: test_api_e2e.py
tests/integration/: test_app.py  test_auth_coverage.py  test_auth_endpoints.py  test_user_coverage.py  test_user_endpoints.py
tests/unit/: test_dependencies.py  test_exceptions.py  test_models.py  test_rate_limit.py  test_security.py  test_utils.py  test_utils_additional.py
ui/: .prettierrc  index.html  package-lock.json  package.json  vitest.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AuthGuard.test.tsx  AuthGuard.tsx  ErrorBoundary.tsx  Layout.tsx  Loading.tsx
ui/src/pages/: Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx  Settings.tsx
ui/src/services/: api.ts
ui/src/stores/: authStore.test.ts  authStore.ts
ui/src/test/: setup.ts  utils.tsx
ui/src/types/: index.ts
ui/src/utils/: validation.test.ts  validation.ts
